exports[`StringCompletionWidget should render 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Typeahead
    id={42}
    items={
        Array [
            Object {
              "suggestions": Array [
                Object {
                  "title": "Apple",
                },
                Object {
                  "title": "Apricot",
                },
              ],
              "title": "A",
            },
            Object {
              "suggestions": Array [
                Object {
                  "title": "Banana",
                },
              ],
              "title": "B",
            },
            Object {
              "suggestions": Array [
                Object {
                  "title": "Cherry",
                },
              ],
              "title": "C",
            },
          ]
    }
    noResultText="No result."
    onChange={[Function]}
    onSelect={[Function]}
    position="left"
    searching={false}
    searchingText="Searching for matches…"
    value="" />,
  "nodes": Array [
    <Typeahead
      id={42}
      items={
            Array [
                  Object {
                    "suggestions": Array [
                      Object {
                        "title": "Apple",
                      },
                      Object {
                        "title": "Apricot",
                      },
                    ],
                    "title": "A",
                  },
                  Object {
                    "suggestions": Array [
                      Object {
                        "title": "Banana",
                      },
                    ],
                    "title": "B",
                  },
                  Object {
                    "suggestions": Array [
                      Object {
                        "title": "Cherry",
                      },
                    ],
                    "title": "C",
                  },
                ]
      }
      noResultText="No result."
      onChange={[Function]}
      onSelect={[Function]}
      position="left"
      searching={false}
      searchingText="Searching for matches…"
      value="" />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <StringCompletionWidget
        fetchItems={[Function]}
        options={
                Object {
                        "itemsSrc": "/test.json",
                      }
        } />,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "fetchItems": [Function],
          "options": Object {
            "itemsSrc": "/test.json",
          },
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Typeahead
          id={42}
          items={
                    Array [
                              Object {
                                "suggestions": Array [
                                  Object {
                                    "title": "Apple",
                                  },
                                  Object {
                                    "title": "Apricot",
                                  },
                                ],
                                "title": "A",
                              },
                              Object {
                                "suggestions": Array [
                                  Object {
                                    "title": "Banana",
                                  },
                                ],
                                "title": "B",
                              },
                              Object {
                                "suggestions": Array [
                                  Object {
                                    "title": "Cherry",
                                  },
                                ],
                                "title": "C",
                              },
                            ]
          }
          noResultText="No result."
          onChange={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
        "_debugID": 2,
        "_renderedOutput": <Typeahead
          id={42}
          items={
                    Array [
                              Object {
                                "suggestions": Array [
                                  Object {
                                    "title": "Apple",
                                  },
                                  Object {
                                    "title": "Apricot",
                                  },
                                ],
                                "title": "A",
                              },
                              Object {
                                "suggestions": Array [
                                  Object {
                                    "title": "Banana",
                                  },
                                ],
                                "title": "B",
                              },
                              Object {
                                "suggestions": Array [
                                  Object {
                                    "title": "Cherry",
                                  },
                                ],
                                "title": "C",
                              },
                            ]
          }
          noResultText="No result."
          onChange={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <StringCompletionWidget
    fetchItems={[Function]}
    options={
        Object {
            "itemsSrc": "/test.json",
          }
    } />,
}
`;

exports[`StringCompletionWidget should render without items 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <Typeahead
    id={42}
    items={Array []}
    noResultText="No result."
    onChange={[Function]}
    onSelect={[Function]}
    position="left"
    searching={false}
    searchingText="Searching for matches…"
    value="" />,
  "nodes": Array [
    <Typeahead
      id={42}
      items={Array []}
      noResultText="No result."
      onChange={[Function]}
      onSelect={[Function]}
      position="left"
      searching={false}
      searchingText="Searching for matches…"
      value="" />,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <StringCompletionWidget
        fetchItems={[Function]}
        options={Object {}} />,
      "_debugID": 3,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "fetchItems": [Function],
          "options": Object {},
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 2,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <Typeahead
          id={42}
          items={Array []}
          noResultText="No result."
          onChange={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
        "_debugID": 4,
        "_renderedOutput": <Typeahead
          id={42}
          items={Array []}
          noResultText="No result."
          onChange={[Function]}
          onSelect={[Function]}
          position="left"
          searching={false}
          searchingText="Searching for matches…"
          value="" />,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <StringCompletionWidget
    fetchItems={[Function]}
    options={Object {}} />,
}
`;
